# analysis

./: .dir-locals.el  .gitattributes  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CHANGELOG_PR_ESS_SUP.md  CHANGELOG_TMP.md  CHANGELOG_UNRELEASED.md  CHANGELOG_UNRELEASED_new.md  CHANGELOG_WGT.md  CONTRIBUTING.md  Compactness.v  Continuity.v  Derive.v  Equiv.v  FILES.md  HOWTORELEASE.md  INSTALL.md  Lim_seq.v  Lub.v  MANIFEST  Makefile  Makefile.common  Makefile.conf  NIX.md  ORIGINAL_FILES.md  README.md  R_ext.v  Rbar.v  Rcomplements.v  Rstruct.v  SHOPPING.md  _CoqProject  _CoqProject_20240831  boolp.v  cara_authors.txt  cara_files.txt  classical_sets.v  compatibility.v  (+41 more)
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: coq-action.yml  deploy-docs-gh-pages.yml  docker-action.yml  generate_and_deploy_docs.yml  generate_docs.yml  generate_htmldoc_for_pullrequests.yml  nix-action-8.11.yml  nix-action-8.12.yml  nix-action-8.13.yml  nix-action-8.14.yml  nix-action-8.15.yml  nix-action-8.16.yml  nix-action-8.17.yml  nix-action-8.18.yml  nix-action-8.19.yml  nix-action-8.20-2.3.0.yml  nix-action-8.20-2.4.0.yml  nix-action-8.20-master.yml  nix-action-8.20.yml  nix-action-9.0-2.4.0.yml  nix-action-9.0-2.5.0.yml  nix-action-9.0-master.yml  nix-action-9.0.yml  nix-action-9.1-master.yml  nix-action-9.1.yml  nix-action-master.yml  nix-action.yml  nix.yml
.nix/: config.nix  coq-nix-toolbox.nix  fallback-config.nix  nixpkgs.nix  shellHook.sh
altreals/: Make  discrete.v  distr.v  realseq.v  realsum.v  xfinmap.v
analysis_stdlib/: Make  Rstruct_topology.v  sampling.v
analysis_stdlib/showcase/: uniform_bigO.v
classical/: #mathcomp_extra.v#  Eqdep_dec.v  Make  all_classical.v  all_ssreflect_compat.v  boolp.v  cardinality.v  classical_orders.v  classical_sets.v  contra.v  filter.v  fsbigop.v  functions.v  internal_Eqdep_dec.v  mathcomp_extra.v  multilinear.v  set_interval.v  sup.v  tensor.v  unstable.v  wochoice.v
collections/src/: .dir-locals.el  collections.v  relations.v  ssrprop.v
coq-alternate-reals/: Makefile  boolp.v  coupling.v  dedekind.v  discrete.v  distr.v  filters.v  opam  reals.v  realseq.v  realsum.v  sandbox.v  xfinmap.v  xsets.v
coq-alternate-reals/src/: discrete.v  reals.v  realsum.v  xfinmap.v
docs/: index.html  index.org
docs/htmldoc_0_3_13/: index.html  index_abbreviation_A.html  index_abbreviation_B.html  index_abbreviation_C.html  index_abbreviation_D.html  index_abbreviation_E.html  index_abbreviation_F.html  index_abbreviation_G.html  index_abbreviation_H.html  index_abbreviation_L.html  index_abbreviation_M.html  index_abbreviation_N.html  index_abbreviation_O.html  index_abbreviation_P.html  index_abbreviation_R.html  index_abbreviation_S.html  index_abbreviation_T.html  index_abbreviation_U.html  index_abbreviation_X.html  index_axiom_C.html  index_axiom_F.html  index_axiom_P.html  index_binder_*.html  index_binder_A.html  index_binder_B.html  index_binder_C.html  index_binder_D.html  index_binder_E.html  index_binder_F.html  index_binder_G.html  index_binder_H.html  index_binder_I.html  index_binder_J.html  index_binder_K.html  index_binder_L.html  index_binder_M.html  index_binder_N.html  index_binder_O.html  index_binder_P.html  index_binder_Q.html  (+266 more)
docs/htmldoc_0_4_0/: index.html  index_abbreviation_A.html  index_abbreviation_B.html  index_abbreviation_C.html  index_abbreviation_D.html  index_abbreviation_E.html  index_abbreviation_F.html  index_abbreviation_G.html  index_abbreviation_H.html  index_abbreviation_I.html  index_abbreviation_L.html  index_abbreviation_M.html  index_abbreviation_N.html  index_abbreviation_O.html  index_abbreviation_P.html  index_abbreviation_Q.html  index_abbreviation_R.html  index_abbreviation_S.html  index_abbreviation_T.html  index_abbreviation_U.html  index_abbreviation_V.html  index_abbreviation_X.html  index_axiom_C.html  index_axiom_F.html  index_axiom_P.html  index_binder_*.html  index_binder_A.html  index_binder_B.html  index_binder_C.html  index_binder_D.html  index_binder_E.html  index_binder_F.html  index_binder_G.html  index_binder_H.html  index_binder_I.html  index_binder_J.html  index_binder_K.html  index_binder_L.html  index_binder_M.html  index_binder_N.html  (+290 more)
docs/htmldoc_0_5_0/: index.html  index_abbreviation_A.html  index_abbreviation_B.html  index_abbreviation_C.html  index_abbreviation_D.html  index_abbreviation_E.html  index_abbreviation_F.html  index_abbreviation_G.html  index_abbreviation_H.html  index_abbreviation_I.html  index_abbreviation_L.html  index_abbreviation_M.html  index_abbreviation_N.html  index_abbreviation_O.html  index_abbreviation_P.html  index_abbreviation_Q.html  (+312 more)
etc/: builddoc_dependency_dot.pl  changes.sh  packager  pr193.sed  rocqnavi_generate-hierarchy-graph.sh
examples/: misc.v
experimental_reals/: Make  dedekind.v  discrete.v  distr.v  edistr.v  realseq.v  realsum.v  xfinmap.v
finmap/: README  finmap.v  xfinmap.v
html_doc/: generate_deps.pl
misc/: Rcompatibility.v  Rstruct.v  uniform_bigO.v
reals/: #reals.v#  Make  Makefile  all_reals.v  constructive_ereal.v  interval_inference.v  itv.v  nsatz_realtype.v  prodnormedzmodule.v  real_interval.v  reals.v  signed.v
reals_fourcolor/: Main.v
reals_stdlib/: Make  Rstruct.v  nsatz_realtype.v
scripts/: add-ssr.py
src/: .dir-locals.el  attic.v  boolp.v  collections.v  coupling.v  dedekind.v  dedibox.v  discrete.v  distr.v  filters.v  funtype.v  realanalysis.v  reals.v  realseq.v  realsum.v  sandbox.v  ssrprop.v  xfinmap.v  xsets.v
theories/: #normedtype.v#  HBgraph.dot  Hoge.v  Make  Rbar.v  Rstruct.v  Rstruct_topology.v  absolute_continuity.v  all_analysis.v  banach_steinhaus.v  banachsteinhaus.v  boolp.v  borel_hierarchy.v  cantor.v  cardinality.v  cauchyetoile.v  cexp.v  charge.v  classical_preds.v  classical_sets.v  complex_holomorphy.v  constructive_ereal.v  convex.v  cpo.v  csum.v  cumulative_1.txt  cumulative_2.txt  cumulative_3.v  derive.v  ehoelder.v  ereal.v  ereal.v~  ess_sup_inf.v  esum.v  esum_counting.v  eudoxus.v  evt.v  exercise6.v  exp.v  fdists.v  (+78 more)
(+8791 files in other folders)
