opam-version: "2.0"
maintainer: "Reynald Affeldt <reynald.affeldt@aist.go.jp>"
version: "dev"

homepage: "https://github.com/math-comp/analysis"
dev-repo: "git+https://github.com/math-comp/analysis.git"
bug-reports: "https://github.com/math-comp/analysis/issues"
license: "CECILL-C"

synopsis: "A library for alternative real numbers for mathematical components"
description: """
This repository contains a library for alternative real numbers for
the Coq proof-assistant and using the Mathematical Components library."""

build: [make "-C" "altreals" "-j%{jobs}%"]
install: [make "-C" "altreals" "install"]
depends: [
  "coq-mathcomp-reals" { = version}
  "coq-mathcomp-bigenough" { (>= "1.0.0") }
]

tags: [
  "category:Mathematics/Real Numbers"
  "keyword:real numbers"
  "keyword:reals"
  "logpath:mathcomp.altreals"
]
authors: [
  "Reynald Affeldt"
  "Alessandro Bruni"
  "Yves Bertot"
  "Cyril Cohen"
  "Marie Kerjean"
  "Assia Mahboubi"
  "Damien Rouhling"
  "Pierre Roux"
  "Kazuhiko Sakaguchi"
  "Zachary Stone"
  "Pierre-Yves Strub"
  "Laurent Théry"
]
