opam-version: "2.0"
maintainer: "Reynald Affeldt <reynald.affeldt@aist.go.jp>"
version: "dev"

homepage: "https://github.com/math-comp/analysis"
dev-repo: "git+https://github.com/math-comp/analysis.git"
bug-reports: "https://github.com/math-comp/analysis/issues"
license: "CECILL-C"

build: [make "-C" "analysis_stdlib" "-j%{jobs}%"]
install: [make "-C" "analysis_stdlib" "install"]
depends: [ "rocq-mathcomp-analysis-stdlib" { = version} ]

tags: [
  "category:Mathematics/Real Numbers"
  "category:Mathematics/Real Calculus and Topology"
  "keyword:real numbers"
  "keyword:reals"
  "logpath:mathcomp.reals_stdlib"
]
authors: [
  "Reynald Affeldt"
  "Alessandro Bruni"
  "Yves Bertot"
  "Cyril Cohen"
  "Marie Kerjean"
  "Assia Mahboubi"
  "Damien Rouhling"
  "Pierre Roux"
  "Kazuhiko Sakaguchi"
  "Zachary Stone"
  "Pierre-Yves Strub"
  "Laurent Théry"
]

synopsis: "Compatibility package for rocq-mathcomp-analysis-stdlib"
