opam-version: "2.0"
maintainer: "Reynald Affeldt <reynald.affeldt@aist.go.jp>"
version: "dev"

homepage: "https://github.com/math-comp/analysis"
dev-repo: "git+https://github.com/math-comp/analysis.git"
bug-reports: "https://github.com/math-comp/analysis/issues"
license: "CECILL-C"

synopsis: "A library to link real numbers from mathematical components and Stdlib"
description: """
This package contains a library to link real numbers for
the Coq proof-assistant using the Mathematical Components library and Stdlib."""

build: [make "-C" "reals_stdlib" "-j%{jobs}%"]
install: [make "-C" "reals_stdlib" "install"]
depends: [
  ("coq" {< "8.21~"}
  | "rocq-stdlib" { (>= "9.0" & < "9.1~") | (= "dev") })
  "coq-mathcomp-reals" { = version}
]

tags: [
  "category:Mathematics/Real Numbers"
  "keyword:real numbers"
  "keyword:reals"
  "logpath:mathcomp.reals_stdlib"
]
authors: [
  "Reynald Affeldt"
  "Alessandro Bruni"
  "Yves Bertot"
  "Cyril Cohen"
  "Marie Kerjean"
  "Assia Mahboubi"
  "Damien Rouhling"
  "Pierre Roux"
  "Kazuhiko Sakaguchi"
  "Zachary Stone"
  "Pierre-Yves Strub"
  "Laurent Théry"
]
