opam-version: "2.0"
maintainer: "Reynald Affeldt <reynald.affeldt@aist.go.jp>"
version: "dev"

homepage: "https://github.com/math-comp/analysis"
dev-repo: "git+https://github.com/math-comp/analysis.git"
bug-reports: "https://github.com/math-comp/analysis/issues"
license: "CECILL-C"

synopsis: "An analysis library for mathematical components"
description: """
This package contains a library for real analysis for
the Coq proof-assistant and using the Mathematical Components library."""

build: [make "-C" "theories" "-j%{jobs}%"]
install: [make "-C" "theories" "install"]
depends: [
  "rocq-mathcomp-reals" { = version}
  "rocq-mathcomp-solvable"
  "rocq-mathcomp-field"
  "rocq-mathcomp-bigenough" { (>= "1.0.0") }
  "rocq-navi" {= "0.4.1" & with-doc}
]

conflicts: [ "coq-mathcomp-analysis" { < "1.16~" } ]

tags: [
  "category:Mathematics/Real Calculus and Topology"
  "keyword:analysis"
  "keyword:Cantor"
  "keyword:topology"
  "keyword:real numbers"
  "keyword:sequence"
  "keyword:convexity"
  "keyword:Landau notation"
  "keyword:logarithm"
  "keyword:sin"
  "keyword:cos"
  "keyword:tangent"
  "keyword:trigonometric function"
  "keyword:exponential"
  "keyword:differentiation"
  "keyword:derivative"
  "keyword:measure theory"
  "keyword:integration"
  "keyword:Lebesgue"
  "keyword:probability"
  "logpath:mathcomp.analysis"
]
authors: [
  "Reynald Affeldt"
  "Alessandro Bruni"
  "Yves Bertot"
  "Cyril Cohen"
  "Marie Kerjean"
  "Assia Mahboubi"
  "Damien Rouhling"
  "Pierre Roux"
  "Kazuhiko Sakaguchi"
  "Zachary Stone"
  "Pierre-Yves Strub"
  "Laurent Théry"
]
