opam-version: "2.0"
maintainer: "Reynald Affeldt <reynald.affeldt@aist.go.jp>"
version: "dev"

homepage: "https://github.com/math-comp/analysis"
dev-repo: "git+https://github.com/math-comp/analysis.git"
bug-reports: "https://github.com/math-comp/analysis/issues"
license: "CECILL-C"

synopsis: "A library for classical logic for mathematical components"
description: """
This repository contains a library for classical logic for
the Coq proof-assistant and using the Mathematical Components library."""

build: [make "-C" "classical" "-j%{jobs}%"]
install: [make "-C" "classical" "install"]
depends: [
  "rocq-core" { (>= "9.0" & < "9.2~") | (= "dev") }
  "rocq-mathcomp-ssreflect" { (>= "2.5.0" & < "2.6~") | (= "dev") }
  "rocq-mathcomp-fingroup"
  "rocq-mathcomp-algebra"
  "rocq-mathcomp-finmap" { (>= "2.1.0") }
  "rocq-hierarchy-builder" { (>= "1.8.0") }
]

conflicts: [ "coq-mathcomp-classical" { < "1.16~" } ]

tags: [
  "category:Mathematics/Logic/Classical logic"
  "keyword:classical logic"
  "keyword:logic"
  "keyword:sets"
  "keyword:set theory"
  "keyword:function"
  "keyword:cardinal"
  "keyword:filter"
  "logpath:mathcomp.classical"
]
authors: [
  "Reynald Affeldt"
  "Alessandro Bruni"
  "Yves Bertot"
  "Cyril Cohen"
  "Marie Kerjean"
  "Assia Mahboubi"
  "Damien Rouhling"
  "Pierre Roux"
  "Kazuhiko Sakaguchi"
  "Zachary Stone"
  "Pierre-Yves Strub"
  "Laurent Théry"
]
